cut off text fixed. Close #13

--- a/styles1.css
+++ b/styles1.css
@@ -161,6 +161,7 @@ li a:active {
           width: 30%;
           float: right;
           margin-top: 50px;
+
           }
 
 .inner-left   {
@@ -177,22 +178,14 @@ li a:active {
           border: #999999 1px solid;
           min-height: 60px;
           position: fixed;
+
           }
-.blogboxing {
-    border: 50px solid black;
-    margin: 30px;
-    display: block;
-
-}
-.blockingforLinks {
-display: block;
 
 
-}
 .imageThumbnails {
 
 width:100% ;
-height:100%;
+height: 175px;
 margin: 0 auto;
 
 }
